# streamlit-copy-to-clipboard-button

./: MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
streamlit_copy_to_clipboard/: __init__.py  example.py
streamlit_copy_to_clipboard/frontend/: package-lock.json  package.json
streamlit_copy_to_clipboard/frontend/src/: CopyToClipboard.tsx
streamlit_copy_to_clipboard_button/: __init__.py  example.py
streamlit_copy_to_clipboard_button/frontend/: package-lock.json  package.json
streamlit_copy_to_clipboard_button/frontend/src/: CopyToClipboard.tsx  index.tsx
