[project]
name = "streamlit-copy-to-clipboard"
version = "1.0.0"
description = "A Streamlit copy-to-clipboard button component that respects the streamlit page styles."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "setuptools>=80.9.0",
    "streamlit-copy-to-clipboard",
    "types-setuptools>=80.9.0.20250529",
]

[tool.uv.sources]
streamlit-copy-to-clipboard = { workspace = true }
